# ai-bureau

./: .gitignore  1-NEXT.md  2-PRELEMINARY-ENTRERPRISE.md  3-PRELIMINARY-CONTEXT-GRAPH-POSITIONING.md  4-PRELIMINARY-COMPOSITION-FRAMEWORK.md  5-PIVOT-DECISION.md  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  DISCIPLINES.md  GLOSSARY.md  HANDOFF.md  LOCKED-STATE.md  MAINTENANCE.md  NEXT.md  PIONEER.md  README.md  ROADMAP.md  VISION.md  dev-link.sh  findings-from-pbs.md  pyproject.toml  references-manifest.yaml
archive/backend/mcp-server/: pyproject.toml
archive/backend/mcp-server/docs/: chunking-strategy.md
archive/backend/mcp-server/src/pbs_mcp/: _strict.py  config.py  office_config.py  project_state.py  server.py
backend/mcp-server/: README.md  pyproject.toml
backend/mcp-server/docs/: chunking-strategy.md  vector-metadata-schema.md
backend/mcp-server/src/pbs_mcp/: __init__.py  audit_trail.py  config.py  db.py  embedder.py  office_config.py  project_state.py  schemas.py  server.py
backend/mcp-server/src/pbs_mcp/chunkers/: __init__.py  eml.py  latex_enumerate.py  latex_textbaustein.py  pdf_window.py  text_window.py  urteil_randnr.py
backend/mcp-server/src/pbs_mcp/integrations/: __init__.py
backend/mcp-server/src/pbs_mcp/office_config_migrations/: __init__.py  v1_to_v2.py  v2_to_v3.py
backend/mcp-server/src/pbs_mcp/tools/: audit.py  build.py  corpus.py  discovery.py  ingest.py  memory.py  projects.py
fresh-plan/impl/: README.md  pyproject.toml
fresh-plan/impl/extensions/a2a-peer-ext/0.1.0/: adapter.json
fresh-plan/impl/extensions/aegis-protocol-ext/0.1.0/: aegis.schema.json  extension-manifest.json
fresh-plan/impl/extensions/claude-agent-sdk-substrate-ext/0.1.0/: extension-manifest.json  substrate.json
fresh-plan/impl/extensions/direct-api-ext/0.2.0/: adapter.json  extension-manifest.json
fresh-plan/impl/extensions/generic-specialist-ext/0.1.0/: generic-task.schema.json  specialist.json
fresh-plan/impl/extensions/inprocess-substrate-ext/0.1.0/: extension-manifest.json
fresh-plan/impl/extensions/mcp-server-ext/0.1.0/: adapter.json
fresh-plan/impl/extensions/mcp-server-ext/0.2.0/: adapter.json
fresh-plan/impl/extensions/mcp-server-side-ext/0.1.0/: adapter.json  mcp-server.schema.json
fresh-plan/impl/extensions/ms-agent-framework-substrate-ext/0.1.0/: extension-manifest.json
fresh-plan/impl/extensions/prov-json-export-ext/0.1.0/: adapter.json  extension-manifest.json  prov-json-export.schema.json
fresh-plan/impl/extensions/rag-via-mcp-ext/0.1.0/: extension-manifest.json  retrieval-task.schema.json
fresh-plan/impl/extensions/rag-via-mcp-ext/0.2.0/: specialist.json
fresh-plan/impl/src/fresh_plan/: __init__.py  cli.py
fresh-plan/impl/src/fresh_plan/extensions/: __init__.py
fresh-plan/impl/src/fresh_plan/runtime/: __init__.py  adapter.py  authority_constraint.py  boot.py  event_chain.py  hooks.py  integrity.py  per_event_checks.py  persistence.py  provision.py  shape.py  skills.py  specialist.py  standards_export.py  substrate.py  workspace.py  workspace_state.py
fresh-plan/impl/src/fresh_plan/validator/: __init__.py  checks.py  dependency.py  (+5 more)
fresh-plan/impl/tests/: conftest.py  test_a2a_peer.py  test_activation_scope.py  test_adapter.py  test_aegis_integrity.py  test_authority_constraint.py  test_checks.py  test_claude_agent_sdk_substrate.py  test_composition_validity.py  test_configuration_passthrough.py  test_dependency_resolution.py  test_direct_api_real_wire.py  test_emit_attribution.py  test_end_to_end.py  test_end_to_end_scenario.py  test_event_chain.py  test_extension_loading.py  test_hooks.py  test_lifecycle_derivation.py  test_mcp_client_real_wire.py  test_mcp_server_real_wire.py  test_ms_agent_framework_substrate.py  test_payload_vocabulary.py  test_per_event_checks.py  test_persistence.py  test_prov_json_export_adapter.py  test_rag_realwire_specialist.py  test_rag_specialist.py  test_sana_style.py  test_schema_loading.py  test_shape.py  test_shape_config_pathway.py  test_shape_migration.py  test_skills.py  test_specialist.py  test_standards_export.py  test_subscriber_dispatch.py  test_substrate_boot.py  test_substrate_e2e.py  test_workspace_lifecycle.py  (+1 more)
(+598 files in other folders)
