[project]
name = "pbs-mcp"
version = "0.1.0"
description = "Local MCP backend for the pbs-bureau Claude Code plugin: corpus search, embeddings, memory ops, project management, LaTeX compile."
requires-python = ">=3.13"
authors = [{ name = "Gunther Schulz" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",            # Model Context Protocol SDK (stdio server)
    "lancedb>=0.16.0",        # embedded vector store
    "fastembed>=0.5.0",       # in-process embedder (ONNX runtime)
    "pyarrow>=18.0.0",        # required by lancedb
    "pydantic>=2.10.0",       # tool input/output schemas
    "pyyaml>=6.0.2",          # reading manifests, configs
    "httpx>=0.28.0",          # for the research-references skill's fetches
]

[project.scripts]
pbs-mcp = "pbs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pbs_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
