[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fresh-plan"
version = "0.1.0"
description = "Conformance validator for the pbs-bureau fresh-plan framework (Phase B workstream B1 per D36)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.18",
    "referencing>=0.30",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.2.0",
    "mcp>=1.0",
    "click>=8.0",
    "node-semver>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
fresh-plan-validate = "fresh_plan.cli:main"
fresh-plan-run = "fresh_plan.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/fresh_plan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
